--- a/template.html
+++ b/template.html
@@ -9,8 +9,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
+  <link
+    rel="shortcut icon"
+    href="public/favicon/art.ico"
+    type="image/x-icon"
+  />
+
   <title>Test App</title>
 </head>
 <body>
+  <img src="public/cover-7.jpg" alt="man">
 </body>
 </html>
